--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "7.26.10",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -39,8 +40,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@remix-run/router": "1.23.2",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.8.4",
+    "brace-expansion": "2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -49,17 +52,23 @@
     "dotenv": "^16.4.7",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.3.0",
+    "esbuild": "0.25.0",
     "express": "^4.21.2",
+    "glob": "10.5.0",
     "input-otp": "^1.2.4",
+    "js-yaml": "4.1.1",
+    "lodash": "4.17.23",
     "lucide-react": "^0.462.0",
+    "nanoid": "3.3.8",
     "next-themes": "^0.3.0",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "7.0.7",
+    "qs": "6.14.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.30.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -84,6 +93,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.12"
   }
 }
